not sure about .nojekyll file, removed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: base
       <div class="feature-inner">
         <div class="v-center-wrapper">
           <div class="v-centered">
-            <button class="btn btn-hollow btn-white">yo yo yo</h1>
+            <button class="btn btn-hollow btn-white">yo yo</h1>
           </div>
         </div>
       </div>
