--- a/elements/elements.html
+++ b/elements/elements.html
@@ -2,6 +2,7 @@
 <link rel="import" href="yo-greeting/yo-greeting.html">
 <link rel="import" href="app-bar/app-bar.html">
 <link rel="import" href="menu-hamburger/menu-hamburger.html">
+<link rel="import" href="preview-card/preview-card.html">
 <link rel="import" href="../bower_components/core-header-panel/core-header-panel.html">
 <link rel="import" href="../bower_components/core-toolbar/core-toolbar.html">
 <link rel="import" href="../bower_components/core-icon-button/core-icon-button.html">
