--- a/elements/menu-hamburger/menu-hamburger.html
+++ b/elements/menu-hamburger/menu-hamburger.html
@@ -7,6 +7,7 @@
 	<script>
 		Polymer('menu-hamburger', {
 			toggleClass:function(e,d,s){
+				console.log(s.classList.contains('closeTxfm'));
 				if(s.classList.contains('closeTxfm')){
 					s.classList.remove('closeTxfm');
 					this.fire('closeMenu');
