--- a/elements/paper-fa-icon-button/paper-fa-icon-button.html
+++ b/elements/paper-fa-icon-button/paper-fa-icon-button.html
@@ -59,7 +59,7 @@
 			paper-ripple::shadow #bg{
 				overflow:hidden;
 				border-radius:50%;
-				background-color:#fff !important;
+				background-color:#4099FF !important;
 			}
 		</style>
 		<div class="button">
