--- a/elements/elements.html
+++ b/elements/elements.html
@@ -1,7 +1,7 @@
-<link rel="import" href="yo-list/yo-list.html">
-<link rel="import" href="yo-greeting/yo-greeting.html">
 <link rel="import" href="app-bar/app-bar.html">
 <link rel="import" href="preview-card/preview-card.html">
+<link rel="import" href="scroll-listener/scroll-listener.html">
+<link rel="import" href="flip-label/flip-label.html">
 <link rel="import" href="../bower_components/core-header-panel/core-header-panel.html">
 <link rel="import" href="../bower_components/core-toolbar/core-toolbar.html">
 <link rel="import" href="../bower_components/core-icon-button/core-icon-button.html">
