--- a/elements/preview-card/preview-card.html
+++ b/elements/preview-card/preview-card.html
@@ -4,8 +4,9 @@
 		<style>
 			:host {
 				display: inline-block;
-				-webkit-flex: 0 2 200px;
-				flex: 0 2 200px;
+				-webkit-flex: 1 1 200px;
+				flex: 1 1 200px;
+				max-width:200px;
 				background-color:#EFEFEF;
 				margin-left:5px;
 				margin-right:5px;
@@ -21,12 +22,10 @@
 				overflow:hidden;
 				max-height:150px;
 			}
-			.preview{
-				height:100px;
-				display:block;
-				max-height:100px;
-				text-overflow:ellipsis;
-			    overflow:hidden;
+			@media(max-width:480px){
+				:host{
+					max-width:100%;
+				}
 			}
 
 		</style>
