cross browser compat issues

--- a/elements/gif-flex/gif-flex.html
+++ b/elements/gif-flex/gif-flex.html
@@ -3,9 +3,11 @@
 	<template>
 		<style>
 			:host {
+				display:-webkit-flex;
 				display: flex;
 				flex-flow:row wrap;
 				justify-content:center;
+				-webkit-align-items:center;
 				align-items: center;
 			}
 		</style>
