--- a/elements/preview-card/preview-card.html
+++ b/elements/preview-card/preview-card.html
@@ -14,6 +14,10 @@
 				-webkit-box-shadow: 3px 4px 3px -3px #999;
 				box-shadow:3px 4px 3px -3px #999;
 			}
+			.image-holder:hover,
+			.text-holder:hover{
+				cursor:pointer;
+			}
 			.text-holder{
 				padding:10px 20px;
 			}
