--- a/elements/playpause-svg/playpause-svg.html
+++ b/elements/playpause-svg/playpause-svg.html
@@ -1,5 +1,5 @@
 <link rel="import" href="/bower_components/polymer/polymer.html">
-<polymer-element name="playpause-svg" attributes="state stroke strokeWidth fill">
+<polymer-element name="playpause-svg" attributes="stroke strokeWidth fill">
 	<template>
 		<link rel="stylesheet" href="playpause-svg.css">
 		<div class="playpause-container">
@@ -40,7 +40,6 @@
 	<script>
 		Polymer('playpause-svg', {
 			created:function(){
-				this.state='play';
 				this.stroke="#555";
 				this.strokeWidth=1;
 				this.fill="transparent";
